<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    >


    <com.starclub.syndicator.customcontrol.CustomStarsiteFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:text="1"
        android:textColor="@color/White"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="52dp"/>

    <com.starclub.syndicator.customcontrol.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/login_title"
        android:textColor="@color/White"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="13dp"
        android:textStyle="bold"/>

    <com.starclub.syndicator.customcontrol.CustomFontEdittext
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/White"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="20dp"
        android:textColorHint="@color/White"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_login_bg"/>

    <com.starclub.syndicator.customcontrol.CustomFontEdittext
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/White"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="20dp"
        android:textColorHint="@color/White"
        android:hint="@string/Password"
        android:password="true"
        android:background="@drawable/edittext_login_bg"/>


    <com.starclub.syndicator.customcontrol.CustomFontTextView
        android:id="@+id/text_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="Terms of Service"
        android:textColor="@color/White"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="11dp"
        android:textColorLink="@color/White"/>

    <com.starclub.syndicator.customcontrol.CustomFontButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_login"
        android:textColor="@color/Black"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:textSize="20dp"
        android:background="@drawable/button_login_bg"/>

</LinearLayout>