<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BackgroundColor">

    <include
        android:id="@+id/navlayout"
        layout="@layout/navigation_bar"/>

 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/ivAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:siBorderWidth="2dp"
                app:siBorderColor="#888888"/>


            <com.starclub.syndicator.customcontrol.CustomFontTextView
                android:id="@+id/lbUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="user name"
                android:textColor="@color/White"
                android:gravity="center"
                android:padding="5dp"
                android:lines="2"
                android:layout_marginTop="5dp"
                android:textSize="17dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.starclub.syndicator.customcontrol.CustomFontTextView
                android:id="@+id/lbPosted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pairing_status"
                android:textColor="#808080"
                android:padding="5dp"
                android:textSize="16dp"
                />

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:padding="10dp"
                android:columnWidth="65dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <com.starclub.syndicator.customcontrol.CustomFontTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/performance_overview"
            android:textColor="#808080"
            android:gravity="left"
            android:padding="5dp"
            android:textSize="13dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:paddingLeft="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <com.starclub.syndicator.widget.GraphView
                android:id="@+id/graphview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.starclub.syndicator.customcontrol.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggested"
                android:textColor="#FFB300"
                android:gravity="left"
                android:padding="5dp"
                android:textSize="13dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>

            <com.starclub.syndicator.customcontrol.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textColor="#FFFFFF"
                android:gravity="left"
                android:padding="5dp"
                android:textSize="13dp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.starclub.syndicator.customcontrol.CustomFontTextView
                    android:id="@+id/lbLowVal"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="7"
                    android:gravity="center"
                    android:textColor="@color/White"
                    android:layout_marginBottom="15dp"
                    android:textSize="32dp"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <SeekBar
                        android:id="@+id/seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressDrawable="@drawable/seekbar_progress"
                        android:thumb="@drawable/seekbar_thumb"/>

                    <LinearLayout
                        android:id="@+id/layoutArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/arrowImage"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:background="@drawable/slide_arrow_bg"/>
                        <com.starclub.syndicator.customcontrol.CustomFontTextView
                            android:id="@+id/currentPerWeekLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="You videos"
                            android:textColor="#808080"
                            android:gravity="center"
                            android:textSize="9dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>

            <com.starclub.syndicator.customcontrol.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos_per_week"
                android:textColor="@color/White"
                android:gravity="center"
                android:textSize="10dp"
                android:layout_gravity="left|bottom"/>

            <com.starclub.syndicator.customcontrol.CustomFontTextView
                android:id="@+id/lbApiVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/api_version"
                android:textColor="#808080"
                android:gravity="right|center_vertical"
                android:textSize="9dp"
                android:textStyle="bold"
                android:layout_gravity="right|bottom"/>
        </FrameLayout>


    </LinearLayout>

</LinearLayout>